--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,27 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="container">
-
-
-    <div>
-      <h3> Hello, world! </h3>
+    <div class="flex-container">
+      <div class="flex-item one">
+        <button type="button">button</button>
+        <button type="button">button</button>
+        <button type="button">button</button>
+        <button class="button-four" type="button">button</button>
+        <button type="button">button</button>
+      </div>
+      <div class="flex-item two">
+        <span>two</span>
+      </div>
+      <div class="flex-item three">
+        <span>three</span>
+      </div>
+      <div class="flex-item four">
+        <span>four</span>
+      </div>
+      <div class="flex-item five">
+        <span>five</span>
+      </div>
     </div>
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
